--- a/appspec.yml
+++ b/appspec.yml
@@ -10,7 +10,16 @@ hooks:
       timeout: 300
   BeforeInstall:
     - location: scripts/echo_beforeinstall
-      timeout: 300    
+      timeout: 300
+  Install:
+    - location: scripts/echo_beforeinstall
+      timeout: 300
+  AfterInstall:
+    - location: scripts/echo_beforeinstall
+      timeout: 300         
   ApplicationStart:
     - location: scripts/start_application
       timeout: 300
+  ValidateService:
+    - location: scripts/echo_beforeinstall
+      timeout: 300  
