--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
     commands:
     - echo Build completed on `date`
     - mvn package
-    - mv target/springboot-first-app-0.0.1-SNAPSHOT.war app.war
+    - mv target/springboot-first-app-0.0.1-SNAPSHOT.war springboot-first-app-0.0.1-SNAPSHOT.war
 artifacts:
   files:
   - '**/*'
